adding individual fields for passwords

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,15 +33,19 @@ body {
 }
 
 .table td:nth-child(1) {
-  width: 10%;
+  width: 20%;
 }
 
 .table td:nth-child(2) {
-  width: 10%;
+  width: 30%;
 }
 
 .table td:nth-child(3) {
-  width: 80%;
+  width: 40%;
+}
+
+.table td:nth-child(4) {
+  width: 10%;
 }
 
 
