--- a/templates/search.html
+++ b/templates/search.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <center><h4>APJ CX Cluster Lookup Site</h4></center>
+        <center><h4>GEMS CN Cluster Lookup Site</h4></center>
         <center><h4>Enter your Email</h4></center>
         <center>
         <form method="GET" action="/">
